[gd_scene load_steps=2 format=3 uid="uid://5is6n10g8b8b"]

[ext_resource type="Script" uid="uid://bdu1s4nar2plq" path="res://main_ui/element_container_ui.gd" id="1_k5wb2"]

[node name="ElementContainerUI" type="PanelContainer"]
custom_minimum_size = Vector2(25, 0)
anchors_preset = -1
anchor_left = 0.9479167
anchor_right = 1.0
anchor_bottom = 0.02962963
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TimerBar" type="ProgressBar" parent="HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(5.555, 7.13)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 1
max_value = 1.0
fill_mode = 3
show_percentage = false

[node name="ElementContainers" type="VBoxContainer" parent="HBoxContainer" groups=["element_container_ui"]]
layout_mode = 2
alignment = 1
script = ExtResource("1_k5wb2")

[node name="Element1Container" type="PanelContainer" parent="HBoxContainer/ElementContainers"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Element1" type="TextureRect" parent="HBoxContainer/ElementContainers/Element1Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Element2Container" type="PanelContainer" parent="HBoxContainer/ElementContainers"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Element2" type="TextureRect" parent="HBoxContainer/ElementContainers/Element2Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Element3Container" type="PanelContainer" parent="HBoxContainer/ElementContainers"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Element3" type="TextureRect" parent="HBoxContainer/ElementContainers/Element3Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="ElementExpiryTimer" type="Timer" parent="HBoxContainer/ElementContainers"]
unique_name_in_owner = true
one_shot = true
